src/test/deca/syntax/valid/parser/oracle/unary_expr_deriv_merged.deca
{
  -!"Hello"; -!(50.0); -!(x * 50); -!readFloat(); -!((int) (x));
  !-"Hello"; !-(50.0); !-(x * 50); !-readFloat(); !-((float) (x));

}
