src/test/deca/syntax/invalid/parser/oracle/instr_print_before_decl.deca
{
	print("Hello World !");
	int i = 0;
}
